--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # 아래 변수명은 약속된 패턴, env 적용 시 서버 재시작 필요
-VUE_APP_API_BASE_URL=http://www.crong94.shop:8080
+VUE_APP_API_BASE_URL=https://server.crong94.shop
 
